# tanuki

./: .dockerignore  .gitignore  .gqlconfig  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  TODO.md  TODO.org  app.js  bsconfig.json  codegen.ts  docker-compose.yml  ecosystem.config.js  elm-package.json  eslint.config.js  eslint.config.ts  graphql_schema.json  gulpfile.js  healthcheck.js  index.html  mix.exs  model-manifest.json  package-lock.json  package.json  pubspec.yaml  tsconfig.json  view.js  vite.config.ts
android/app/: build.gradle
apps/tanuki_backend/: mix.exs
apps/tanuki_backend/lib/: tanuki_backend.ex
apps/tanuki_backend/test/: tanuki_backend_test.exs
apps/tanuki_incoming/: mix.exs
apps/tanuki_incoming/config/: config.exs
apps/tanuki_incoming/lib/: tanuki_incoming.ex
apps/tanuki_incoming/test/: tanuki_incoming_test.exs
apps/tanuki_web/: .gitignore  mix.exs
apps/tanuki_web/assets/: brunch-config.js  package.json
backend/: incoming.js  index.js
client/: .gitignore  ApolloProvider.tsx  AssetCount.tsx  ColorTheme.tsx  Home.tsx  Navbar.tsx  README.md  Upload.tsx  apollo-provider.tsx  index.tsx  main.scss  pubspec.yaml
client/assets/: main.scss
client/assets/icons/: README.txt
client/components/: AssetCount.tsx  AttributeChips.tsx  CardsGrid.tsx  ColorTheme.tsx  Navbar.tsx  Pagination.tsx  TagSelector.tsx  asset-count.tsx  attribute-chips.tsx  back-to-top.tsx  cards-grid.tsx  color-theme.tsx  gallery-media.tsx  justified-rows.tsx  layout-selector.tsx  masonry-grid.tsx  navbar.tsx  pagination.tsx  square-grid.tsx  synthetic-progress.tsx  tag-selector.tsx  thumb-list.tsx
client/helpers/: formatting.ts  parsing.ts
client/hooks/: use-click-outside.ts  use-local-storage.ts  useLocalStorage.ts
client/pages/: Details.tsx  Home.tsx  Pending.tsx  Upload.tsx  details.tsx  edit.tsx  home.tsx  labels.tsx  pending.tsx  people.tsx  search.tsx  upload.tsx
client/test/: widget_test.dart
client/web/: manifest.json
config/: default.json  docker.json  tanuki.rc  test.json
containers/: README.md  docker-compose.yml  healthcheck.ts
doc/: DEPLOY.md  DESIGN.md  HISTORY.md  LEPTOS.md  MODELS.md  REPAIR.md  SOLIDJS.md
doc/architecture/: Rewrite-2025.md
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-use-rust-for-backend.md  0003-use-flutter-for-frontend.md  0004-use-rocksdb.md  0005-use-clean-architecture.md  0006-use-graphql-protocol.md  0007-store-assets-raw.md  0008-use-state-management.md  0009-use-riverpod-vs-get_it.md  0010-use-leptos.md  0011-support-sqlite.md  0012-support-duckdb.md  0013-use-couchdb.md  0014-use-backend-js.md  0015-use-solidjs.md  0016-support-remote-blobs.md  0017-ml-models.md
doc/internal/: DiagnoseRepair.md
doc/specs/: 0001-has-predicate.md  0002-update-video-dates.md  0003-asset-metadata.md  0004-synthetic-data.md
docker/: Dockerfile  docker-compose.yml
elm-src/: Commands.elm  Decoders.elm  Main.elm  Messages.elm  Mimetypes.elm  Model.elm  Routing.elm  Update.elm  View.elm
healthcheck/src/: main.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: assets.js  backend.js  container.dart  incoming.js  main.dart  migrate.js  resolvers.js  schema.dart  schema.graphql  tags.dart  thumbs.js
lib/core/error/: failures.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
public/: index.html  schema.graphql
public/javascripts/: app.js
public/stylesheets/: style.css
rel/: config.exs
routes/: api.js  graphql.js  pages.js
scripts/: base64url.ts  build-release-assets.ts  fetch-models.ts
server/: .gitignore  README.md  container.ts  env.ts  logger.ts  main.ts  pubspec.yaml
server/data/repositories/: CouchDBRecordRepository.ts  DummyLocationRepository.ts  EnvSettingsRepository.ts  GoogleLocationRepository.ts  LocalBlobRepository.ts  MapSettingsRepository.ts  asset-metadata-codec.ts  couchdb-record-repository.ts  couchdb-views.js  couchdb_views.js  detecting-synthetic-job-processor.ts  dummy-location-repository.ts  env-settings-repository.ts  google-location-repository.ts  local-blob-repository.ts  local-bob-repository.ts  local-synthetic-detector.ts  map-settings-repository.ts  memory-search-repository.ts  namazu-blob-repository.ts  namazu-synthetic-detector.ts  pouchdb-record-repository.ts  sqlite-face-store.ts  sqlite-migrations.ts  sqlite-record-repository.ts  synthetic-data-codec.ts
server/data/sources/: GoogleMaps.ts
server/data/synthetic/: README.md  face-align.ts  label-curation.ts  labels-map.json  mobilenet-preprocess.ts  scrfd-decode.ts
server/domain/entities/: Asset.ts  Location.ts  (+10 more)
server/lib/: schema.dart
server/test/: images_test.dart  schema_test.dart  web_test.dart
src/: Client.re  EditAsset.re  Home.re  Imports.re  Index.re  Locations.re  Mimetypes.re  Navbar.re  NotFound.re  Redux.re  Search.re  ShowAsset.re  Tags.re  Thumbnails.re  Upload.re  Years.re  app.js  app.ts  assets.js  backend.js  core.rs  data.rs  database.rs  export.js  incoming.js  lib.rs  logging.js  main.re  main.rs  middleware.re  migrate.js  resolvers.js  server.js  server.ts  thumbs.js
src/data/: mod.rs  models.rs  repositories.rs  sources.rs
src/domain/: entities.rs  mod.rs  repositories.rs  usecases.rs
src/preso/: graphql.rs  leptos.rs  mod.rs
src/routes/: graphql.js  graphql.ts  pages.js  pages.ts
style/: main.scss
test/: asset.js  caching.js  env.ts  images_test.dart  metadata.js  migrate.js  moredata.js  nodata.js  pagination.js  schema_test.dart  serving.js  somedata.js  test.js  thumbs.js  video.js  widget_test.dart
test/fixtures/: 100_1206.MOV  MVI_0727.AVI  README.dumb  dump.json
tests/: data_sources_test.rs  database_test.rs  search_test.rs
tests/common/: mod.rs
tests/fixtures/: dump.json  shirt_small.heic
views/: error.ejs  index.ejs  upload.ejs
web/: Client.re  EditAsset.re  Home.re  Redux.re  Search.re  ShowAsset.re  Thumbnails.re  index.html  main.re  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+366 files in other folders)
