[package]
name = "tanuki"
version = "1.0.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2021"
description = "Personal digital asset management system."
repository = "https://github.com/nlfiedler/tanuki"
readme = "README.md"
keywords = ["assets", "photos", "videos"]
license = "MIT"
default-run = "tanuki"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.0"
actix-multipart = "0.7.2"
actix-web = "4.0.1"
anyhow = "1.0.55"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
futures = "0.3.4"
glob = "0.3.1"
image = "0.25.1"
juniper = { version = "0.16.1", features = ["chrono"] }
kamadak-exif = "0.5.5"
log = "0.4.8"
lru = "0.12.1"
mime = "0.3.17"
mime_guess = "2.0.3"
mokuroku = { version = "3.5.0", features = ["anyhow", "serde_cbor"] }
mp4 = "0.13.0"
reqwest = "0.12.4"
riff = "2.0.0"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
sha2 = "0.10.1"
tokio = { version = "1.36.0", features = ["full"] }
ulid = "1.1.3"

[dev-dependencies]
mockall = "0.13.0"
tempfile = "3.1.0"

[profile.release]
strip = "debuginfo"

[workspace]
exclude = ["healthcheck"]
